fix: fix overflow

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -26,3 +26,8 @@
         @apply capitalize;
     }
 }
+
+html,
+body {
+    overflow-x: hidden;
+}
